adding some future posts

--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ googleAnalytics = "UA-44194112-6"
     author = "Max Mitchell"
     description = "personal blog for all things normal"
     githubUsername = "assumednormal"
-    accent = "red"
+    accent = "blue"
     showBorder = true
     backgroundColor = "white"
     font = "Work Sans" # should match the name on Google Fonts!
